--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
     iframe {
       width: 100%;
       height: calc(100% - 60px);
-      border: none;
+          border: none;
+  
+      }      
+      @media (max-width: 600px) {
+      header {
+        padding: 10px;
+        font-size: 1rem;
+      }
+      iframe {
+        height: calc(100% - 50px);
+      }
+  
     }
   </style>
 </head>
